testsuite/tests/backpack/should_fail/bkpfail20.bkp
unit p where
    signature A(newSTRef) where
        import Data.STRef.Lazy(newSTRef)
unit q where
    signature A(newSTRef) where
        import Data.STRef.Strict(newSTRef)
unit r where
    dependency p[A=<B>]
    dependency q[A=<B>]
