testsuite/tests/backpack/should_fail/bkpfail20.stderr
[1 of 3] Processing p
  [1 of 1] Compiling A[sig]          (.hsig -> nothing)
[2 of 3] Processing q
  [1 of 1] Compiling A[sig]          (.hsig -> nothing)
[3 of 3] Processing r
  [1 of 1] Compiling B[sig]          (.hsig -> nothing)

bkpfail20.bkp:1:1: error:
    While merging export lists, could not unify Data.STRef.Lazy.newSTRef with GHC.STRef.newSTRef
